<?xml version="1.0"?>
<package format="3">
  <name>baseball_board</name>
  <version>0.0.0</version>
  <description>Baseball board action package</description>
  <maintainer email="kurehiro1009@gmail.com">ubuntu</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>